--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nuxt": "^3.0.0"
   },
   "dependencies": {
+    "@nuxt/image-edge": "^1.0.0-27907872.f4dd19d",
     "@nuxtjs/tailwindcss": "^6.1.3",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
